--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "debug": "^2.1.1",
     "ms": "^0.7.0",
     "ratelimiter": "^2.0.0",
-    "thenify": "^3.0.0"
+    "thenify": "^3.0.0",
+    "lodash": "^3.10.1"    
   },
   "devDependencies": {
     "koa": "^0.14.0",
