--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "koa-ratelimit",
   "description": "Rate limiter middleware for koa",
-  "repository": "koajs/ratelimit",
-  "version": "2.1.0",
+  "repository": "iamdevonbutler/koa-ratelimit-multi",
+  "version": "0.1.0",
   "keywords": [
     "koa",
     "middleware",
@@ -18,7 +18,7 @@
     "ms": "^0.7.0",
     "ratelimiter": "^2.0.0",
     "thenify": "^3.0.0",
-    "lodash": "^3.10.1"    
+    "lodash": "^3.10.1"
   },
   "devDependencies": {
     "koa": "^0.14.0",
