--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "koa-ratelimit-multi",
   "description": "Rate limiter middleware for koa",
   "repository": "iamdevonbutler/koa-ratelimit-multi",
-  "version": "0.1.2",
+  "version": "1.0.0-beta",
   "keywords": [
     "koa",
     "middleware",
@@ -18,7 +18,7 @@
     "ms": "^0.7.0",
     "ratelimiter": "^2.0.0",
     "thenify": "^3.0.0",
-    "lodash": "^3.10.1"
+    "wildcard": "^1.1.2"
   },
   "devDependencies": {
     "koa": "^0.14.0",
@@ -31,7 +31,7 @@
     "test": "NODE_ENV=test node_modules/mocha/bin/mocha --harmony --reporter spec"
   },
   "engines": {
-    "node": ">= 0.11.13"
+    "node": ">= 4.0.0"
   },
   "license": "MIT"
 }
